# talking_robo

./: .gitignore  LICENSE  README.md  pyproject.toml  qna.txt  requirements.txt  test.py
conf/: gemini_prompt_template.yml  gemini_template.yml
notebooks/: Untitled.ipynb  experiments.ipynb  gemma.ipynb  mistral_7b_quantized.ipynb  pipeline_testing.ipynb  web_parsing.ipynb
src/: main.py
src/talking_robo/: exceptions.py  main.py
src/talking_robo/prompt/: chain_creator.py  prompt_handler.py
src/vdb/: vec_db.py
