[project]
name = "talking_robo"
version = "0.0.1"
authors = [
  { name="Aum Pandya", email="aumpandya.95@gmail.com" },
]
description = "A chatbot building on the power of LLMs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"